[package]
name = "brainwires-agent"
description = "Agent coordination primitives + multi-agent patterns for the Brainwires Agent Framework — communication hub, file/resource locks, task manager/queue, git coordination, contract net, saga, optimistic concurrency, market allocation, workflow graph, three-state model. LLM-driven workhorses live in `brainwires-inference`."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-agent"
keywords = ["ai-agents", "multi-agent", "task-orchestration", "llm", "autonomous"]
categories = ["development-tools"]

[dependencies]
# Internal crates. brainwires-call-policy + brainwires-telemetry kept here
# (without code-level use) because they're referenced by this crate's
# `native` / `telemetry` features for downstream feature passthrough.
brainwires-core.workspace = true
brainwires-call-policy.workspace = true
brainwires-tool-runtime = { workspace = true }

# Async runtime — wasm-compatible feature set (sync, time, rt, macros).
# `process` (used by saga.rs for git subprocesses) pulls in mio's net
# stack, which doesn't compile on wasm32-unknown-unknown. Added under a
# non-wasm target gate below.
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow.workspace = true

# Identifiers & time
uuid.workspace = true
chrono.workspace = true

# Git (for worktree management, native only)
git2 = { workspace = true, optional = true }

# Graph algorithms (for state model dependency analysis)
petgraph = "0.7"

# Process liveness checking (Unix, native only)
libc = { version = "0.2", optional = true }

# Async traits
async-trait.workspace = true

# thiserror removed — was eval-only; eval extracted to brainwires-eval in Phase 11e.
# sha2 / hex / regex / futures / brainwires-tool-builtins removed in harness
# Phase-2 cleanup — `cargo machete` confirmed all five had zero usages in
# src/ after the Phase-11 module extractions. `futures` still lives in
# [dev-dependencies] for tests that drive streams.

# SEAL deps moved with the crate in Phase 11d (extracted to brainwires-seal).
# brainwires-knowledge / brainwires-permission / brainwires-storage / arrow /
# lancedb / brainwires-mdap are no longer agent-side concerns.

# OpenTelemetry (optional, for otel feature)
opentelemetry = { version = "0.28", optional = true }

# Telemetry — analytics events + billing hooks (optional, used by `telemetry`
# feature for downstream feature passthrough — agent code itself no longer
# emits events directly; brainwires-inference does).
brainwires-telemetry = { workspace = true, optional = true }

# Logging
tracing.workspace = true

# Skills deps removed in Phase 11c (extracted to brainwires-skills).
# Eval deps (serde_yml + thiserror gated by `eval`) removed in Phase 11e.

# Native-only extras: `process` (subprocess management via saga.rs) and
# the rt-multi-thread executor are not supported on wasm32. Adding them
# here keeps `cargo check -p brainwires-agent --target wasm32-...` green
# while the native build still picks them up automatically.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["process", "rt-multi-thread"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
futures.workspace = true
tempfile.workspace = true
tracing-subscriber = "0.3"
brainwires-knowledge = { workspace = true, features = ["knowledge"] }
brainwires-prompting = { workspace = true, features = ["knowledge"] }
brainwires-permission = { workspace = true }

[features]
default = ["native"]
native = ["dep:git2", "dep:libc", "brainwires-core/native", "brainwires-call-policy/native"]
wasm = ["brainwires-core/wasm", "brainwires-call-policy/wasm"]
# Eval — extracted to its own brainwires-eval crate in Phase 11e.
# (kept as a tracking comment so consumers know where the feature went.)
# OpenTelemetry span export for agent execution traces
otel = ["dep:opentelemetry"]
# Analytics events + billing hooks
telemetry = ["dep:brainwires-telemetry", "brainwires-telemetry/native"]
# MDAP — extracted to its own brainwires-mdap crate in Phase 11b.
# (kept as a tracking comment so consumers know where the feature went.)
# SEAL — extracted to its own brainwires-seal crate in Phase 11d.
# (kept as a tracking comment so consumers know where the features went.)
# Skills — extracted to its own brainwires-skills crate in Phase 11c.
# (kept as a tracking comment so consumers know where the features went.)

[[example]]
name = "optimistic_concurrency"

[[example]]
name = "three_state_model"

[[example]]
name = "contract_net"

[[example]]
name = "saga_compensation"

[[example]]
name = "task_queue_scheduling"

# Inference-related examples moved to crates/brainwires-inference/examples/
# in Phase 11f: agent_pool, validation_loop, cycle_orchestrator,
# planner_judge_parsing.
# mdap examples moved to crates/brainwires-mdap/examples/ in Phase 11b.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
