[package]
name = "brainwires-call-policy"
description = "Resilience middleware (retry, circuit breaker, budget, cache, error classification) for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-call-policy"
keywords = ["resilience", "retry", "circuit-breaker", "budget", "llm"]
categories = ["asynchronous"]

[dependencies]
brainwires-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = "0.8"
rusqlite = { workspace = true, optional = true }

[features]
default = ["native"]
native = []
wasm = []
cache = ["dep:rusqlite"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
async-stream = { workspace = true }
tempfile = { workspace = true }
