[package]
name = "brainwires-inference"
description = "LLM-driven workhorses for the Brainwires Agent Framework — chat agent, planner / judge / validator helpers, task agent, cycle orchestrator, summarization, system-prompt registry. Built on brainwires-agent for coordination primitives."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-inference"
keywords = ["inference", "llm", "agents", "chat", "framework"]
categories = ["development-tools"]

[dependencies]
# Internal — agent coordination primitives + LLM call policy + tools
brainwires-core = { workspace = true }
brainwires-agent = { workspace = true }
brainwires-call-policy = { workspace = true }
brainwires-tool-runtime = { workspace = true }

# Async runtime + streams
tokio = { version = "1.43", features = ["sync", "time", "rt", "macros", "fs"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization + ids + time + errors + logging
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Hashing (chat-agent prompt-hash snapshotting)
sha2 = { workspace = true }
hex = { workspace = true }

# Regex (system-prompt parsing)
regex = { workspace = true }

# OpenTelemetry (optional, mirrored from agent's `otel` feature)
opentelemetry = { version = "0.28", optional = true }

[features]
default = ["native"]
native = ["brainwires-core/native", "brainwires-call-policy/native", "brainwires-agent/native"]
wasm = ["brainwires-core/wasm", "brainwires-call-policy/wasm", "brainwires-agent/wasm"]

# OpenTelemetry span export
otel = ["dep:opentelemetry"]
# Source uses `telemetry` cfg name in task_agent/* for the analytics
# integration hook. Empty placeholder so the cfg gates resolve under
# -Dwarnings; tracing is conditionally wired when this feature is on.
telemetry = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
tracing-subscriber = "0.3"
# Summarization integration test exercises `BuiltinToolExecutor`.
brainwires-tool-builtins = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
