[package]
name = "brainwires-inference"
description = "LLM-driven workhorses for the Brainwires Agent Framework — chat agent, planner / judge / validator helpers, task agent, cycle orchestrator, summarization, system-prompt registry. Built on brainwires-agent for coordination primitives."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-inference"
keywords = ["inference", "llm", "agents", "chat", "framework"]
categories = ["development-tools"]

[dependencies]
# Internal — agent coordination primitives + LLM call policy + tools.
# `brainwires-tool-runtime` is plumbed without features here so the
# wasm32 build doesn't drag in `tokio/process` via its `native` feature
# (which transitively pulls mio and breaks wasm). Native callers
# re-activate `tool-runtime/native` via this crate's own `native`
# feature below.
brainwires-core = { workspace = true }
brainwires-agent = { workspace = true }
brainwires-call-policy = { workspace = true }
brainwires-tool-runtime = { workspace = true, default-features = false }

# Async runtime + streams. `fs` is not supported on wasm32 (tokio's
# wasm support is limited to sync/macros/io-util/rt/time); keep the
# base set wasm-compatible and add `fs` only on non-wasm targets below.
tokio = { version = "1.43", features = ["sync", "time", "rt", "macros"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization + ids + time + errors + logging
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Hashing (chat-agent prompt-hash snapshotting)
sha2 = { workspace = true }
hex = { workspace = true }

# Regex (system-prompt parsing)
regex = { workspace = true }

# OpenTelemetry (optional, mirrored from agent's `otel` feature)
opentelemetry = { version = "0.28", optional = true }

# Analytics collector + BillingHook + UsageEvent — used by the
# `telemetry`-gated billing/observability paths in task_agent/agent.rs.
# Activated by the `telemetry` feature below.
brainwires-telemetry = { workspace = true, optional = true }

# Filesystem helpers (used by chat_agent.rs prompt snapshotting and
# task_agent.rs validation hooks). wasm has no filesystem.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[features]
default = ["native"]
native = [
    "brainwires-core/native",
    "brainwires-call-policy/native",
    "brainwires-agent/native",
    "brainwires-tool-runtime/native",
]
wasm = ["brainwires-core/wasm", "brainwires-call-policy/wasm", "brainwires-agent/wasm"]

# OpenTelemetry span export
otel = ["dep:opentelemetry"]
# Wire the analytics-collector / BillingHook / UsageEvent integrations in
# task_agent/agent.rs. Was previously `telemetry = []` (empty placeholder
# — broke compile when enabled because the dep wasn't declared).
telemetry = ["dep:brainwires-telemetry", "brainwires-telemetry/native"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
tracing-subscriber = "0.3"
# Summarization integration test exercises `BuiltinToolExecutor`.
brainwires-tool-builtins = { workspace = true }
brainwires-test-fixtures = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
